further work on registration screen
- terms and condition check box
- rudimentary credential validation

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -1,7 +1,14 @@
 {
     "name": "Name",
+    "iAcceptThe": "Ich akzeptiere die",
+    "termsAndConditions": "AGBs",
     "email": "E-Mail",
     "password": "Passwort",
+    "tooShort": "Zu kurz",
+    "invalid": "Ungültig",
+    "invalidDate": "Ungültiges Datum",
+    "notThatOld": "Du bist sicher nicht so alt",
+    "mustBe18": "Das Mindestalter ist 18 Jahre",
     "logIn": "Anmelden",
     "logOut": "Abmelden",
     "logInInstead": "Stattdessen anmelden",
