registration screen progress
- added auth exception handling
- cleaned up the workflow
- added sleak design

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -14,11 +14,23 @@
     "logInInstead": "Stattdessen anmelden",
     "btnBack": "< Zurück",
     "btnNext": "Weiter >",
+    "accept": "Zustimmen",
+    "codexRespect": "Respektiere alle in der Community",
+    "codexPrivacy": "Sei dir bewusst, dass alles was du teilst, von anderen gesehen wird",
+    "codexAuthenticity": "Sei authentisch und ehrlich",
     "finish": "Fertig",
     "registerHelpTextName": "So wirst du anderen Nutzern angezeigt.",
     "registerHelpTextBDay": "Bitte sag uns, wann du geboren bist.",
     "registerHelpTextCredentials": "Bitte ausfüllen, um dein Profil anzulegen.",
     "nameCantBeEmpty": "Name darf nicht leer sein",
+    "exceptionNetworkRequestFailed": "Ein Verbindungsfehler ist aufgetreten. Stell bitte sicher, dass du eine stabile Verbindung zum Internet hast.",
+    "exceptionAccountAlreadyExists": "Account existiert bereits",
+    "exceptionInvalidEmail": "Ungültige E-Mail Adresse",
+    "exceptionWeakPassword": "Schwaches Passwort",
+    "exceptionUserDisabled": "Benutzerkonto ist gesperrt",
+    "exceptionUserNotFound": "Benutzer konnte nicht gefunden werden",
+    "exceptionWrongPassword": "Passwort ist nicht korrekt",
+    "unexpectedErrorOccured": "Ein unerwarteter Fehler ist aufgetreten",
     "profile": "Profil",
     "map": "Karte"
 }
