first version of map
including location permissions etc.

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -36,5 +36,8 @@
     "unexpectedErrorOccured": "Ein unerwarteter Fehler ist aufgetreten",
     "somethingWentWrong": "Etwas ist schief gelaufen",
     "profile": "Profil",
-    "map": "Karte"
+    "map": "Karte",
+    "locationServicesDisabled": "Standortdienste sind deaktiviert. Bitte aktivieren.",
+    "locationPermissionsDenied": "Standortdienste wurden abgelehnt",
+    "locationPermissionsPermDenied": "Standortdienste wurden dauerhaft abgelehnt, Zugriff kann nicht mehr erbeten werden."
 }
