gender screen added
- user profile displays DB data now
- birthday naming is now the same everywhere
- made web-app more unique

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -5,6 +5,7 @@
     "email": "E-Mail",
     "password": "Passwort",
     "tooShort": "Zu kurz",
+    "forgotPassword": "Passwort vergessen?",
     "invalid": "Ungültig",
     "invalidDate": "Ungültiges Datum",
     "notThatOld": "Du bist sicher nicht so alt",
@@ -18,6 +19,11 @@
     "month": "Monat",
     "day": "Tag",
     "accept": "Zustimmen",
+    "howDoYouIdentify": "Wie identifizierst du dich?",
+    "male": "Männlich",
+    "female": "Weiblich",
+    "other": "Anderes",
+    "yourGender": "Dein Geschlecht",
     "codexRespect": "Respektiere alle in der Community",
     "codexPrivacy": "Sei dir bewusst, dass alles was du teilst, von anderen gesehen wird",
     "codexAuthenticity": "Sei authentisch und ehrlich",
