implemented central data handler
- smoother, faster loading
- small screen and functionality adjustments for a more even experience

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -45,5 +45,6 @@
     "map": "Karte",
     "locationServicesDisabled": "Standortdienste sind deaktiviert. Bitte aktivieren.",
     "locationPermissionsDenied": "Standortdienste wurden abgelehnt",
-    "locationPermissionsPermDenied": "Standortdienste wurden dauerhaft abgelehnt, Zugriff kann nicht mehr erbeten werden."
+    "locationPermissionsPermDenied": "Standortdienste wurden dauerhaft abgelehnt, Zugriff kann nicht mehr erbeten werden.",
+    "pleaseEnableLocationPermissions": "Bitte gib die Ortungsdienste frei und starte die App erneut."
 }
