--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -46,5 +46,5 @@
     "locationServicesDisabled": "Standortdienste sind deaktiviert. Bitte aktivieren.",
     "locationPermissionsDenied": "Standortdienste wurden abgelehnt",
     "locationPermissionsPermDenied": "Standortdienste wurden dauerhaft abgelehnt, Zugriff kann nicht mehr erbeten werden.",
-    "pleaseEnableLocationPermissions": "Bitte gib die Ortungsdienste frei und starte die App erneut."
+    "pleaseEnableLocationPermissions": "Bitte gib die Ortungsdienste für diese App frei."
 }
