--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -159,7 +159,7 @@
     "@exceptionWrongPassword": {
         "description": "Exception thrown when trying to log in with wrong password"
     },
-    "unexpectedErrorOccured": "An unexpected error occurred",
+    "unexpectedErrorOccured": "An unexpected error occurred. Please check your internet connection.",
     "@unexpectedErrorOccured": {
         "description": "Default error message"
     },
