--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -103,6 +103,22 @@
     "@yourGender": {
         "descripiton": "Describing your own gender"
     },
+    "occupation": "Occupation",
+    "@occupation": {
+        "descripiton": "Label for what a user's job discription or education is"
+    },
+    "sexuality": "Sexuality",
+    "@sexuality": {
+        "descripiton": "User's sexual orientation'"
+    },
+    "biography": "Bio",
+    "@biography": {
+        "descripiton": "Section, where user can say a bit about themselves"
+    },
+    "relationshipStatus": "Relationship Status",
+    "@relationshipStatus": {
+        "descripiton": "User's current relationship status"
+    },
     "codexRespect": "Respect everyone in the community",
     "@codexRespect": {
         "descripiton": "Community guidline about respect"
@@ -194,5 +210,13 @@
     "pleaseEnableLocationPermissions": "Please enable location permissions for this app.",
     "@pleaseEnableLocationPermissions": {
         "description": "Hint for user to turn on location settings for the app in order for the map functionality to work"
+    },
+    "avatarCustomization": "Avatar Customization",
+    "@avatarCustomization": {
+        "description": "Header for Fluttermoji customization screen"
+    },
+    "settings": "Settings",
+    "@settings": {
+        "description": "Settings screen title"
     }
 }
