added user customization
data model is finished
occupation can already be edited

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -26,8 +26,10 @@
     "other": "Anderes",
     "yourGender": "Dein Geschlecht",
     "occupation": "Tätigkeit",
-    "sexuality": "Sexualität",
     "relationshipStatus": "Beziehungsstatus",
+    "relationshipStatusTaken": "Vergeben",
+    "relationshipStatusSingle": "Single",
+    "preferNotToAnswer": "Keine Angaben",
     "biography": "Bio",
     "codexRespect": "Respektiere alle in der Community",
     "codexPrivacy": "Sei dir bewusst, dass alles was du teilst, von anderen gesehen wird",
