profile edit finished
- user profile info can now be customized (data gets saved too)
- map is now dark and contains attribution

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -55,5 +55,6 @@
     "locationPermissionsPermDenied": "Standortdienste wurden dauerhaft abgelehnt, Zugriff kann nicht mehr erbeten werden.",
     "pleaseEnableLocationPermissions": "Bitte gib die Ortungsdienste für diese App frei.",
     "avatarCustomization": "Avatar Anpassung",
-    "settings": "Einstellungen"
+    "settings": "Einstellungen",
+    "save": "Speichern"
 }
