--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -226,5 +226,9 @@
     "settings": "Settings",
     "@settings": {
         "description": "Settings screen title"
+    },
+    "save": "Save",
+    "@save": {
+        "description": "Text for save button"
     }
 }
