location improvement and email verification
- location is now being tracked in the background too
- permissions are directing to the settings page
- email verification is sent through firebase

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -56,5 +56,6 @@
     "pleaseEnableLocationPermissions": "Bitte gib die Ortungsdienste für diese App frei.",
     "avatarCustomization": "Avatar Anpassung",
     "settings": "Einstellungen",
-    "save": "Speichern"
+    "save": "Speichern",
+    "pleaseVerifyYourEmailAddress": "Bitte verifiziere deine E-Mail Adresse"
 }
